[package]
name = "monkey-rs"
version = "0.1.0"
authors = ["Kim Seungha <seungha.me@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "monkey_rs"
path = "src/lib.rs"

[[bin]]
name = "monkey_rs"
path = "src/bin/main.rs"

[dependencies]
